manifests/fastapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: hello-k8s
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: ghcr.io/brkcvlk/hello-k8s-fastapi:967ed4ace87801337a9dc769dac92372c03b04ba
          imagePullPolicy: Always 
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
