manifests/fastapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: hello-k8s
spec:
  selector:
    app: fastapi
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
