manifests/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: hello-k8s
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
